welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:16: error: too many arguments for method droite: ()Unit
    droite(2);
          ^