welcome.lessons.welcome.bdr.BDR.scala.code
var fini:Boolean = false ;
var x:String = "D" ;
if (estSurMessage()){
    x=litMessage();
}
while (!fini) {
  if (x == "R") {
    droite();
    avance();
  } 
  if (x == "L") {
    gauche();
    avance();
  } 
  if (x == "I") {
    droite(2);
    avance();
  } 
  if (x == "A") {
    avance();
  }
  if (x == "B") {
    avance();
    avance();
  }
  if (x == "C") {
    avance();
    avance();
    avance();
  }
  if (x == "Z") {
    recule();
  } 
  if (x == "Y") {
    recule();
    recule();
  } 
  if (x == "X") {
    recule();
    recule();
    recule();
  }

}